Week 4 in Progress

--- a/Week4-Spatial/spatial_assignment.Rmd
+++ b/Week4-Spatial/spatial_assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment: Spatial Diversity"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Michelle Benavidez; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
@@ -37,8 +37,9 @@ In the R code chunk below, provide the code to:
 3. Set your working directory to your "*/Week4-Spatial*" folder, and
 
 ```{r, results = 'hide'}
-
-
+rm(list=ls())
+getwd()
+setwd("/Users/kamibena/GitHub/QB2017_Benavidez/Week4-Spatial")
 ```
 
 ## 2) LOADING R PACKAGES
@@ -48,14 +49,13 @@ In the R code chunk below, do the following:
 1. Install and/or load the following packages: `vegan`, `sp`, `gstat`, `raster`, `RgoogleMaps`, `maptools`, `rgdal`, `simba`, `gplots`, `rgeos`
 
 ```{r, results = 'hide', message = FALSE, warning = FALSE} 
-
-
-
+install.packages(c("vegan", "sp", "gstat", "raster", "RgoogleMaps", "maptools", "rgdal", "simba", "gplots", "rgeos"))
+require(c("vegan", "sp", "gstat", "raster", "RgoogleMaps", "maptools", "rgdal", "simba", "gplots", "rgeos"))
 ```
 
 ***Question 1***:  What are the packages `simba`, `sp`, and `rgdal` used for?
 
-> ***Answer 1***:  
+> ***Answer 1***:
 
 
 ## 3) LOADING DATA
@@ -67,8 +67,10 @@ In the R code chunk below, use the example in the handout to do the following:
 4. Remove the first column (i.e., site names) from the OTU matrix.
 
 ```{r, results = 'hide', message = FALSE, warning = FALSE} 
-
-
+Ponds=read.table(file="BrownCoData/20130801_PondDataMod.csv",head=T,sep=",")
+OTUs=read.csv(file="BrownCoData/SiteBySpecies.csv",head=T,sep=",")
+otu.names=names(OTUs)
+OTUs=as.data.frame(OTUs[-1])
 ```
 
 ***Question 2a***:  How many sites and OTUs are in the SiteBySpecies matrix? 
@@ -88,7 +90,12 @@ In the R code chunk below, do the following:
 This map will be centered on Brown County, Indiana (39.1 latitude, -86.3 longitude).
 
 ```{r}
+lats=as.numeric(Ponds[,3])
+lons=as.numeric(Ponds[,4])
 
+newmap=GetMap(center=c(39.1,-86.3),zoom=10)
+PlotOnStaticMap(newmap,zoom=10,cex=2,col='blue')
+PlotOnStaticMap(newmap,lats,lons,cex=1,pch=20,col='red',add=T)
 ```
 
 ***Question 3***:  Briefly describe the geographical layout of our sites.
@@ -102,17 +109,23 @@ In the R code chunk below, do the following:
 
 ```{r}
 # 1. Import TreeCover.tif as a raster file.
+Tree.Cover=raster("TreeCover/TreeCover.tif")
 
 # 2. Plot the % tree cover data
+plot(Tree.Cover,xlab="Longitude',ylab=Lattitude",
+     main='Map of geospatial data for % tree cover,\nwater bodies, and sample sites')
 
 # 3. Import water bodies as a shapefile.
+Water.Bodies=readShapeSpatial("water/water.shp")
 
 # 4. Plot the water bodies around our study area, i.e., Monroe County.
+plot(Water.Bodies,border='cyan',axes=T,add=T)
 
 # 5. Convert lat-long data for ponds to georeferenced points.
+Refuge.Ponds=SpatialPoints(cbind(lons,lats))
 
 # 6. Plot the refuge pond locations
-
+plot(Refuge.Ponds,line='r',col='red',pch=20,cex=1.5,add=T)
 ```
 
 ***Question 4a***: What are datums and projections?
@@ -139,26 +152,66 @@ In the R code chunk below, do the following:
 Note: You will need to use some of the data transformations within the *semivariogram* section of the handout.
 
 ```{r, results = 'hide', message = FALSE, warning = FALSE}
+
+xy=data.frame(env = Ponds$TDS, pond.name = Ponds$Sample_ID, lats = Ponds$lat, lons = Ponds$long)
+
+coordinates(xy)=~lats+lons
+
+proj4string(xy)=CRS("+proj=longlat +datum=NAD83")
+
+UTM=spTransform(xy, CRS("+proj=utm +zone=51 +ellps=WGS84"))
+
+UTM=as.data.frame(UTM)
+xy$lats_utm <- UTM[,2]
+xy$lons_utm <- UTM[,3]
+
+
+
 # 1) Calculate Bray-Curtis similarity between plots using the `vegdist()` function
+comm.dist=1 - vegdist(OTUs)
 
 # 2) Assign UTM lattitude and longitude data to 'lats' and 'lons' variables
+lats=as.numeric(xy$lats_utm)
+lons=as.numeric(xy$lons_utm)
 
 # 3) Calculate geographic distance between plots and assign to the variable 'coord.dist'
+coord.dist=dist(as.matrix(lats, lons))
 
 # 4) Transform environmental data to numeric type, and assign to variable 'x1'
+x1=as.numeric(Ponds$"SpC")
 
 # 5) Using the `vegdist()` function in `simba`, calculate the Euclidean distance between the plots for environmental variables. Assign the result to the variable 'env.dist'
+env.dist=vegdist(x1, "euclidean")
 
 # 6) Transform all distance matrices into database format using the `liste()` function in `simba`:
+comm.dist.ls=liste(comm.dist, entry="comm") 
+env.dist.ls=liste(env.dist, entry="env") 
+coord.dist.ls=liste(coord.dist, entry="dist")
 
 # 7) Create a data frame containing similarity of the environment and similarity of community.
+df=data.frame(coord.dist.ls, env.dist.ls[,3], comm.dist.ls[,3])
 
 # 8) Attach the columns labels 'env' and 'struc' to the dataframe you just made.
+names(df)[4:5]=c("env","struc")
+attach(df)
 
 # 9) After setting the plot parameters, plot the distance-decay relationships, with regression lines in red.
+par(mfrow=c(1, 2), pty="s")
+plot(env, struc, xlab="Environmental Distance", ylab="1 - Bray-Curtis",
+     main = "Environment", col='SteelBlue')
+
+OLS=lm(struc~env)
+OLS
+abline(OLS,col="red4")
+
+ plot(dist, struc, xlab="Geographic Distance", ylab="1 - Bray-Curtis", main="Community\nComposition", col='darkorchid4')
+ 
+OLS=lm(struc ~ dist) 
+OLS
+abline(OLS,col="red4")
 
 # 10) Use `simba` to calculates the difference in slope or intercept of two regression lines
-
+diffslope(env, struc, dist, struc)
 ```
 
 
@@ -180,13 +233,31 @@ In the R code chunk below, do the following:
 2. Draw six OTUs at random from the IN ponds dataset and and plot their SSADs as kernel density curves. Use **while loops** and **if** statements to accomplish this.
 
 ```{r}
+siteN=rowSums(OTUs)
 # 1. Define an SSAD function
+ssad=function(x){
+  ad=c(2, 2)
+  ad=OTUs[, otu]
+  ad = as.vector(t(x = ad)) 
+  ad = ad[ad > 0]
+}
 
 # 2. Set plot parameters
+par(mfrow=c(2, 2))
 
 # 3. Declare a counter variable
+ct=0
 
 # 4. Write a while loop to plot the SSADs of six species chosen at random 
+while(ct<4){
+  otu=sample(1:length(OTUs),1)
+  ad=ssad(otu)
+  if(length(ad)>10&sum(ad>100)){
+    ct=ct+1
+    plot(density(ad),col='red',xlab='Site Abundane',
+         ylab='Probability Density',main=otu.names[otu])
+    }
+}
 
 ```
 
@@ -211,11 +282,27 @@ In the R code chunk below, provide the code to:
 1. Simulate the spatial distribution of a community with 100 species, letting each species have between 1 and 1,000 individuals.
 
 ```{r, results = 'hide', message = FALSE, warning = FALSE}
+
+par(mfrow=c(2,2))
+
 # 1. Declare variables to hold simulated community and species information 
+sd=0.75
+mn=1.5
 
 # 2. Populate the simulated landscape
+x1 <- rnorm(10000, mean = mn, sd =sd) 
+y1 <- rnorm(10000, mean = mn, sd =sd)
+x2 <- rnorm(10000, mean = -mn, sd =sd) 
+y2 <- rnorm(10000, mean = -mn, sd =sd)
+x3 <- rnorm(10000, mean = -mn, sd =sd) 
+y3 <- rnorm(10000, mean = mn, sd =sd)
+x4 <- rnorm(10000, mean = mn, sd =sd)
+y4 <- rnorm(10000, mean = -mn, sd =sd)
 
-
+plot(x,y, xlim=c(-4, 4), ylim=c(-6, 6), pch=".", cex=2, col='Steelblue') 
+plot(x,y, xlim=c(-2, 2), ylim=c(-2, 2), pch=".", cex=2,col='Steelblue') 
+plot(x,y, xlim=c(-1, 1), ylim=c(-1, 1), pch=".", cex=2,col='Steelblue') 
+plot(x,y, xlim=c(-0.5, 0.5), ylim=c(-0.5, 0.5), pch=".", cex=2, col='Steelblue')
 ```
 
 While consult the handout for assistance, in the R chunk below, provide the code to: 
@@ -224,11 +311,35 @@ While consult the handout for assistance, in the R chunk below, provide the code
 2. Plot the SAR and regression line. 
 
 ```{r}
+
+par(mfrow=c(1, 2), pty="s")
 # 1. Declare the spatial extent and lists to hold species richness and area data
+community=c()
+species=c()
+
+plot(0, 0, col='white', xlim = c(0, 100), ylim = c(0, 100), 
+     xlab='x coordinate', ylab='y coordinate', 
+main='A simulated landscape occupied by 100
+species, having 1 to 1000 individuals each.')
+
+
 
 # 2. Construct a 'while' loop and 'for' loop combination to quantify the numbers of species for progressively larger areas of the simulated landscape.
 
+while (length(community) < 100){
+  std <- runif(1, 1, 10)
+  ab <- sample(1000, 1)
+  x <- rnorm(ab, mean = runif(1, 0, 100), sd = std)
+  y <- rnorm(ab, mean = runif(1, 0, 100), sd = std)
+  color <- c(rgb(runif(1),runif(1),runif(1)))
+  
+  points(x, y, pch=".", col=color)
+  species <- list(x, y, color)
+  community[[length(community)+1]] <- species 
+}
+
 # 3. Be sure to log10-transform the richness and area data
+
 ```
 
 
